--- a/src/data/levels/02_Assembly/05_Branching/chat/en.yml
+++ b/src/data/levels/02_Assembly/05_Branching/chat/en.yml
@@ -91,10 +91,10 @@ exercise:
   - the opposite of `BNE` is `BEQ`, which jumps when the numbers are equal
   - let's practice 👾
   - 📚  _-_delete the current code_--_
-  - _-_and build a program that reads the value of $4080_--_
-  - _-_if it has a 7, writes $EE to $40BF_--_
-  - _-_if not, writes $AA to $40BF_--_
-  - _-_then, run the `test` command_--_
+  - 📚  _-_and build a program that reads the value of $4080_--_
+  - 📚  _-_if it has a 7, writes $EE to $40BF_--_
+  - 📚  _-_if not, writes $AA to $40BF_--_
+  - 📚  _-_then, run the `test` command_--_
   responses:
   - wait, how do I test this? 🧪 [testing]
   - I need help 😅 [help]
