--- a/src/data/levels/02_Assembly/06_Addressing modes (1-3)/chat/es.yml
+++ b/src/data/levels/02_Assembly/06_Addressing modes (1-3)/chat/es.yml
@@ -164,9 +164,9 @@ exercise:
   messages:
   - ahí está...
   - 📚  _-_como ejercicio, modifica el código agregando una instrucción `STY $1001` al final_--_
-  - _-_luego una instrucción `INX`_--_
-  - _-_y por último, cambia las líneas 10 y 12 para que el `JMP` indirecto vaya directamente a la nueva `INX` _--_👀
-  - _-_cuando termines, ejecuta el comando `test`_--_
+  - 📚  _-_luego una instrucción `INX`_--_
+  - 📚  _-_y por último, cambia las líneas 10 y 12 para que el `JMP` indirecto vaya directamente a la nueva `INX` _--_👀
+  - 📚  _-_cuando termines, ejecuta el comando `test`_--_
   responses:
   - momento, ¿qué? [what]
 
