--- a/src/data/levels/03_Cartridge/01_Using JS modules/chat/en.yml
+++ b/src/data/levels/03_Cartridge/01_Using JS modules/chat/en.yml
@@ -46,9 +46,9 @@ exercise:
     set((m) => m.$end = true);
   messages:
   - 📚  _-_create a file in _--_📄 _-_ ~/code/Cartridge.js~_--_
-  - _-_its default export should be an empty class_--_
-  - _-_then, import that file from _--_📄 _-_ ~/code/index.js~_--_
-  - _-_and export an object literal with only one key (`Cartridge`) pointing to that class_--_
+  - 📚  _-_its default export should be an empty class_--_
+  - 📚  _-_then, import that file from _--_📄 _-_ ~/code/index.js~_--_
+  - 📚  _-_and export an object literal with only one key (`Cartridge`) pointing to that class_--_
   - |-
     _-_your ~index.js~ file should look like this:
       ```javascript
