--- a/src/data/levels/05a_CPU/01_New CPU/chat/es.yml
+++ b/src/data/levels/05a_CPU/01_New CPU/chat/es.yml
@@ -4,6 +4,6 @@ main:
   - ahora comenzaremos a programar la CPU, el <cerebro> de la consola 🧠
   - a esta altura, ya tienes una idea de cómo funciona
   - 📚  _-_crea un archivo para el código de la CPU, usando _--_📄 _-_ ~/tmpl/cpu/CPU.js~ como plantilla_--_
-  - _-_luego, importa ese archivo desde _--_📄 _-_ ~/code/index.js~_--_
-  - _-_y agrega la correspondiente clave `CPU` al objeto exportado_--_
+  - 📚  _-_luego, importa ese archivo desde _--_📄 _-_ ~/code/index.js~_--_
+  - 📚  _-_y agrega la correspondiente clave `CPU` al objeto exportado_--_
   responses: []
