--- a/src/data/levels/05a_CPU/15_Execute/chat/en.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/en.yml
@@ -69,7 +69,7 @@ rightway:
 step:
   messages:
   - |-
-    _-_our `step()` method should come up easily, using the others:
+    📚  _-_our `step()` method should come up easily, using the others:
       ```javascript step() {
         const originalPC = this.pc.getValue();
         
