--- a/src/data/levels/02_Assembly/04_Flags/chat/es.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/es.yml
@@ -114,6 +114,6 @@ exercise:
   - 📚  _-_sin eliminar el código actual, intenta sustraer 4 a [A], con la instrucción `SBC`_--_
   - _-_funciona igual que `ADC`, pero resta en lugar de sumar_--_
   - _-_luego de la instrucción, la Bandera Zero debería estar en 1 _--_😊
-  - _-_cuando esté listo, ejecuta el comando `test`_--_
+  - 📚  _-_cuando esté listo, ejecuta el comando `test`_--_
   responses:
   - ...carry
