--- a/src/data/levels/02_Assembly/07_Addressing modes (2-3)/chat/es.yml
+++ b/src/data/levels/02_Assembly/07_Addressing modes (2-3)/chat/es.yml
@@ -124,7 +124,7 @@ exercise:
     {{Bottom}}.setDelay(0);
   messages:
   - 📚  _-_borra todo el código_--_
-  - _-_construye un programa que grite por la memoria _--_😱
+  - 📚  _-_construye un programa que grite por la memoria _--_😱
   - _-_eso significa, que escriba $AA exactamente 64 veces desde $4080 hasta $40BF_--_
-  - _-_como siempre, cuando esté listo, ejecuta el comando `test`_--_
+  - 📚  _-_como siempre, cuando esté listo, ejecuta el comando `test`_--_
   responses: []
