--- a/src/data/levels/03_Cartridge/06_Locating the graphics/chat/en.yml
+++ b/src/data/levels/03_Cartridge/06_Locating the graphics/chat/en.yml
@@ -5,5 +5,5 @@ main:
   - 📚  _-_create a ```javascript chr()``` method that returns an `Uint8Array` containing them_--_
   - _-_graphics are located right after the program, but remember they're optional!_--_
   - <{chr.png}>
-  - _-_if the header says that the game uses <CHR-RAM> instead of <CHR-ROM>, just return a ```javascript new Uint8Array(8192)```_--_
+  - 📚  _-_if the header says that the game uses <CHR-RAM> instead of <CHR-ROM>, just return a ```javascript new Uint8Array(8192)```_--_
   responses: []
