--- a/src/data/levels/03_Cartridge/06_Locating the graphics/chat/es.yml
+++ b/src/data/levels/03_Cartridge/06_Locating the graphics/chat/es.yml
@@ -5,5 +5,5 @@ main:
   - 📚  _-_crea un método ```javascript chr()``` que retorne un `Uint8Array` con ellos_--_
   - _-_los gráficos están ubicados justo después del programa, ¡pero recuerda que son opcionales!_--_
   - <{chr.png}>
-  - _-_si la cabecera dice que el juego usa <CHR-RAM> en lugar de <CHR-ROM>, solo retorna un ```javascript new Uint8Array(8192)```_--_
+  - 📚  _-_si la cabecera dice que el juego usa <CHR-RAM> en lugar de <CHR-ROM>, solo retorna un ```javascript new Uint8Array(8192)```_--_
   responses: []
