--- a/src/data/levels/04_Memory/02_Devices/chat/es.yml
+++ b/src/data/levels/04_Memory/02_Devices/chat/es.yml
@@ -10,7 +10,7 @@ main:
     📚  _-_agrega a tu `CPUMemory` el siguiente método:_--_
     *_-_*onLoad(ppu, apu, mapper, controllers)**:_--_
       *_-_*->** guarda los parámetros como propiedades (~this.ppu~, ~this.apu~, ~this.mapper~, y ~this.controllers~)_--_
-  - _-_luego, como hiciste antes con ~this.ram~, modifica `read(...)` y `write(...)` para dejar que ~this.mapper~ maneje el rango $4020-$FFFF (_--_💾 _-_ Espacio del cartucho)_--_
+  - 📚  _-_luego, como hiciste antes con ~this.ram~, modifica `read(...)` y `write(...)` para dejar que ~this.mapper~ maneje el rango $4020-$FFFF (_--_💾 _-_ Espacio del cartucho)_--_
   - _-_en <lecturas>, deberías retornar ~this.mapper.cpuRead(address)~_--_
   - _-_en <escrituras>, deberías llamar a ~this.mapper.cpuWrite(address, value)~ y retornar_--_
   responses:
