--- a/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/en.yml
+++ b/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/en.yml
@@ -15,8 +15,8 @@ howmany:
   - there are 16 of them, but I already coded 3 for you! 😎
   - and some of them are pretty similar
   - 📚  _-_create an object following the same format as the example_--_
-  - _-_implement all of the 16 arithmetic instructions on it_--_
-  - _-_and export it under the `instructions` key in _--_📄 _-_ ~/code/index.js~_--_
+  - 📚  _-_implement all of the 16 arithmetic instructions on it_--_
+  - 📚  _-_and export it under the `instructions` key in _--_📄 _-_ ~/code/index.js~_--_
   - _-_you need docs regarding what should each instruction do_--_
   - _-_so check out _--_📄 _-_ ~/docs/cpu/instructions.en.md~_--_
   responses:
