--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
@@ -94,5 +94,5 @@ implement:
 
 brk:
   messages:
-  - _-_you can implement the `BRK` instruction just by calling `cpu.interrupt(interrupts.IRQ, true)`_--_
+  - 📚  _-_you can implement the `BRK` instruction just by calling `cpu.interrupt(interrupts.IRQ, true)`_--_
   responses: []
