--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -94,5 +94,5 @@ implement:
 
 brk:
   messages:
-  - _-_puedes implementar la instrucción `BRK` solo llamando `cpu.interrupt(interrupts.IRQ, true)`_--_
+  - 📚  _-_puedes implementar la instrucción `BRK` solo llamando `cpu.interrupt(interrupts.IRQ, true)`_--_
   responses: []
