--- a/src/data/levels/05a_CPU/12_Addressing modes (1-2)/chat/es.yml
+++ b/src/data/levels/05a_CPU/12_Addressing modes (1-2)/chat/es.yml
@@ -27,7 +27,7 @@ letscode:
   - por lo que solo tendrás que implementar "Relative" e "Indirect"
   - ¡puedes tomar el código de 📄  ~/tmpl/cpu/addressingModes.js~ y continuar desde ahí!
   - 📚  _-_implementa los modos de direccionamiento restantes_--_
-  - _-_y exporta el objeto bajo la clave `addressingModes` en _--_📄 _-_ ~/code/index.js~_--_
+  - 📚  _-_y exporta el objeto bajo la clave `addressingModes` en _--_📄 _-_ ~/code/index.js~_--_
   responses:
   - ayúdame con el modo "Relative" 😅 [relative]
   - ayúdame con el modo "Indirect" 😅 [indirect]
