--- a/src/data/levels/05a_CPU/15_Execute/chat/es.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/es.yml
@@ -69,7 +69,7 @@ rightway:
 step:
   messages:
   - |-
-    _-_nuestro método `step()` debería salir fácil, usando los otros:
+    📚  _-_nuestro método `step()` debería salir fácil, usando los otros:
       ```javascript step() {
         const originalPC = this.pc.getValue();
         
