--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
@@ -62,16 +62,16 @@ draw:
       ```javascript
       this.frameBuffer = new Uint32Array(256*240);```_--_
   - |-
-    _-_implement this method:_--_
+    📚  _-_implement this method:_--_
     *_-_*plot(x, y, color)**:_--_
       *_-_*->** assigns the ~color~ to the pixel ~(x,y)~ in the ~frameBuffer~ array_--_
         _-_(the index for ~(x,y)~ should be ~y * 256 + x~)_--_
-  - _-_then, modify your `step` method so it receives an `onFrame` callback as parameter_--_
+  - 📚  _-_then, modify your `step` method so it receives an `onFrame` callback as parameter_--_
   - |-
-    _-_and every time you detect a new frame (right after ```javascript this.frame++;```), call it with the frame buffer, like this:
+    📚  _-_and every time you detect a new frame (right after ```javascript this.frame++;```), call it with the frame buffer, like this:
       ```javascript onFrame(this.frameBuffer);```_--_
   - |-
-    _-_to ensure that everything works correctly, add this code before the `onFrame` call:
+    📚  _-_to ensure that everything works correctly, add this code before the `onFrame` call:
       ```javascript
       // <test>
       for (let x = 0; x < 256; x++) {
