--- a/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
@@ -44,9 +44,9 @@ useit:
   - in the case of 📊  `PPUStatus`, it uses `addWritableField` because the PPU needs to write them (e.g. `ppuStatus.isInVBlankInterval = 1`) so the CPU can read the updated values via `onRead()`
   - 📚  _-_create a `VideoRegisters` class, using that template_--_
   - |-
-    _-_add a `registers` property to `PPU`, assigned to:_--_
+    📚  _-_add a `registers` property to `PPU`, assigned to:_--_
          _-_```javascript new VideoRegisters(this)```_--_
-  - _-_lastly, map them in `CPUMemory` (regions $2000-$2007 and $4014):_--_
+  - 📚  _-_lastly, map them in `CPUMemory` (regions $2000-$2007 and $4014):_--_
   - _-_<reads> should return ~this.ppu.registers.read(address)~_--_
   - _-_<writes> should call ~this.ppu.registers.write(address, value)~ and return_--_
   responses: []
