--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
@@ -1,7 +1,6 @@
 ---
 main:
   messages:
-  - "TODO: BROKEN PARENTHESIS in \"you can use\""
   - games define, in runtime, how the background should look 🏞️
   - they create a map using tiles, and store it in 🐏  VRAM
   responses:
@@ -12,7 +11,7 @@ how:
   - through the video registers called 📍  PPUAddr and 📦  PPUData
   - they are like a bridge that connects the 🧠  CPU and 🖥️  PPU
   - first, games put the VRAM address they want to write in 📍  PPUAddr
-  - "(two consecutives writes: one for the <high byte>, and one for the <low byte>)"
+  - "(two consecutive writes: one for the <high byte>, and one for the <low byte>)"
   - then, they write to 📦  PPUData the byte they want to put in that address
   - <{PPUAddr_PPUData.png}>
   responses:
@@ -31,7 +30,7 @@ define:
       *_-_*->** initializes two properties:_--_
         _-_~this.latch = false~_--_
         _-_~this.address = 0~_--_
-        _-_(we'll use these to modelate the alternating behavior between high byte / low byte on every write operation)_--_
+        _-_(we'll use these to model the alternating behavior between high byte / low byte on every write operation)_--_
     *_-_*onWrite(value)**:_--_
       *_-_*->** if ~latch~ is ~false~:_--_
         *_-_*->** writes only the <high part> of ~address~, using ~value~_--_
@@ -49,12 +48,21 @@ define:
         _-_(you can access the `PPUAddr` instance with ~this.ppu.registers.ppuAddr~)_--_
       *_-_*->** calls ~this._incrementAddress()~_--_
     *_-_*_incrementAddress()**:_--_
-      *_-_*->** // TODO: FINISH AND EXPLAIN ADDRESS INCREMENTS_--_
-      _incrementAddress() {
-        const { ppuAddr, ppuCtrl } = this.unit.registers;
+      *_-_*->** if ~ppuCtrl.vramAddressIncrement32~ is ~1~:_--_
+        *_-_*->** increments ~ppuAddr.address~ by 32_--_
+      *_-_*->** if not:_--_
+        *_-_*->** increments ~ppuAddr.address~ 1 time_--_
+     *_-_*[!]** make sure the address never exceeds 65535 by using `byte.toU16(...)`_--_
+  - |-
+    📚  _-_lastly, modify in `PPUStatus`:_--_
+    *_-_*onRead()**:_--_
+      *_-_*->** after resetting ~isInVBlankInterval~, it also resets the ~latch~ from `PPUAddr`_--_
+  responses:
+  - what's this address increment? 🤔 [increment]
 
-        ppuAddr.address = byte.toU16(
-          ppuAddr.address + (ppuCtrl.vramAddressIncrement32 ? 32 : 1)
-        );
-      }
+increment:
+  messages:
+  - yeah, I forgot to tell you
+  - the PPU increments the address automatically after writing to 📦  PPUData
+  - depending on what's in 🎛️  PPUCtrl, this can be a ~+1~ or a ~+32~
   responses: []
